feat(tests): add MongoDB integration tests for ReBAC and remove obsolete feature-driven tests
- Introduced `MongoDbReBacIntegrationIT` for comprehensive integration testing of ReBAC with MongoDB.
- Validated policy creation, relationship storage, decision evaluation, and MongoDB query filter generation.
- Removed `FeatureDrivenPracticeEnforcementTest` as it was deemed unnecessary.
- Updated `policy-decision.feature` to reflect new scenarios and enhance coverage for entitlement decisions.